--- a/src/public/css/home/login.css
+++ b/src/public/css/home/login.css
@@ -8,7 +8,7 @@
 .form {
   position: relative;
   z-index: 1;
-  background: #FFFFFF;
+  background: #ffffff;
   max-width: 360px;
   margin: 0 auto 100px;
   padding: 45px;
@@ -35,14 +35,16 @@
   border: 0;
   margin: 0 auto;
   padding: 15px;
-  color: #FFFFFF;
+  color: #ffffff;
   font-size: 14px;
   -webkit-transition: all 0.3 ease;
   transition: all 0.3 ease;
   cursor: pointer;
 }
-.form #button:hover,.form #button:active,.form #button:focus {
-  background:#e3c8f3;
+.form #button:hover,
+.form #button:active,
+.form #button:focus {
+  background: #e3c8f3;
 }
 .form .message {
   margin: 15px 0 0;
@@ -62,7 +64,8 @@
   max-width: 300px;
   margin: 0 auto;
 }
-.container:before, .container:after {
+.container:before,
+.container:after {
   content: "";
   display: block;
   clear: both;
@@ -87,17 +90,17 @@
   text-decoration: none;
 }
 .container .info span .fa {
-  color: #EF3B3A;
+  color: #ef3b3a;
 }
 body {
-  background: #8FBC8F; /* fallback for old browsers */
-  background: -webkit-linear-gradient(right, #E6E6FA, #c5b5d3);
-  background: -moz-linear-gradient(right, #E6E6FA, #c5b5d3);
-  background: -o-linear-gradient(right, #E6E6FA, #c5b5d3);
-  background: linear-gradient(to left, #E6E6FA, #c5b5d3);
+  background: #8fbc8f; /* fallback for old browsers */
+  background: -webkit-linear-gradient(right, #e6e6fa, #c5b5d3);
+  background: -moz-linear-gradient(right, #e6e6fa, #c5b5d3);
+  background: -o-linear-gradient(right, #e6e6fa, #c5b5d3);
+  background: linear-gradient(to left, #e6e6fa, #c5b5d3);
   font-family: "Roboto", sans-serif;
   -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;      
+  -moz-osx-font-smoothing: grayscale;
 }
 select {
   margin: 0;
