--- a/src/views/home/list.ejs
+++ b/src/views/home/list.ejs
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html>
-
   <head>
     <meta charset="utf-8">
     <title>UNIV_MEETING_PLACE</title>
@@ -37,6 +36,7 @@
       gtag('config', 'UA-119386393-1')
     </script>
 
+    <link rel="stylesheet" href="/css/home/index.css" />
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons"
     rel="stylesheet">
     <script src="https://code.jquery.com/jquery-3.6.0.js" integrity="sha256-H+K7U5CnXl1h5ywQfKtSj8PCmoN9aaq30gDh27Xc0jk=" crossorigin="anonymous"></script>
@@ -47,7 +47,7 @@
   </head>
   
   <body onload="load();">
-    <div class="header" style="display: flex; align-items: center; padding: 0 45px 0 45px; width: 100%">
+    <div class="header" style="display: flex; flex-wrap: nowrap; align-items: center; padding: 0 45px 0 45px; width: 100%">
       <h2 style="display: flex; align-items: center">
         <a href="/">
           <img src="/assets/person.png" style="width: 30px; margin-right: 10px" />UNIV MEETING PLACE
@@ -70,13 +70,13 @@
       </div>
     </div>
 
-    <div class="main-container" style="padding-left: 20px;">
+    <div class="main-container" style="padding-left: 20px; padding-right: 20px;">
       <div class="pd-ltr-20">
         <div class="row">
           <div class="col-xl-4 mb-30"></div>
           <div class="col-xl-4 mb-30">
             <div class="card-box height-100-p pd-20">
-              <h2 class="h4" style="margin-bottom: 0"><%=name%>님의 약속</h2>
+              <h5 class="h5" style="margin-bottom: 0"><%=name%>님의 약속</h5>
               <p style="color: #b4b4b4; margin-bottom: 20px">장소 이름을 클릭하여 상세 정보를 볼 수 있습니다.</p>
               <div class="list-group" id="appointment_list" style="display: flex;align-items: center;"></div>
             </div>
