Fix: 경로 최적화

--- a/src/views/home/addmember.ejs
+++ b/src/views/home/addmember.ejs
@@ -35,7 +35,7 @@
       gtag("config", "UA-119386393-1");
     </script>
 
-    <link rel="stylesheet" href="/css/home/index.css" />
+    <link rel="stylesheet" href="/css/home/addmember.css" />
     <script
       src="https://code.jquery.com/jquery-3.6.0.js"
       integrity="sha256-H+K7U5CnXl1h5ywQfKtSj8PCmoN9aaq30gDh27Xc0jk="
@@ -43,9 +43,9 @@
     ></script>
     <script
       type="text/javascript"
-      src="https://dapi.kakao.com/v2/maps/sdk.js?appkey=c06242e4a9d597f942abd0370042edbf&libraries=services,clusterer,drawing"
+      src="https://dapi.kakao.com/v2/maps/sdk.js?appkey=3c8cb66006a235d48fe9fd48b319d1f7&libraries=services,clusterer,drawing"
     ></script>
-    <script src="/js/home/index.js" defer></script>
+    <script src="/js/home/addmember.js" defer></script>
   </head>
 
   <body onload="current_position();">
