--- a/src/views/home/midpoint.ejs
+++ b/src/views/home/midpoint.ejs
@@ -35,7 +35,7 @@
       gtag("config", "UA-119386393-1");
     </script>
 
-    <link rel="stylesheet" href="/css/home/index.css" />
+    <link rel="stylesheet" href="/css/home/addmember.css" />
     <script
       src="https://code.jquery.com/jquery-3.6.0.js"
       integrity="sha256-H+K7U5CnXl1h5ywQfKtSj8PCmoN9aaq30gDh27Xc0jk="
