Fix: 경로 오류 수정

--- a/src/views/home/list.ejs
+++ b/src/views/home/list.ejs
@@ -63,7 +63,7 @@
             <span class="user-name"><%=name%></span>
           </a>
           <div class="dropdown-menu dropdown-menu-right dropdown-menu-icon-list">
-            <a class="dropdown-item" href="/list"><i class="dw dw-user1"></i> 약속 확인</a>
+            <a class="dropdown-item" href="/history"><i class="dw dw-user1"></i> 약속 확인</a>
             <a class="dropdown-item" href="/logout"><i class="dw dw-logout"></i> 로그아웃</a>
           </div>
         </div>
