--- a/src/views/home/login.ejs
+++ b/src/views/home/login.ejs
@@ -1,28 +1,38 @@
 <!DOCTYPE html>
 <html lang="ko">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <!-- Required meta tags -->
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
 
-<head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="/css/home/login.css">
-  <script src="/js/home/login.js" defer></script>
-  <title>로그인</title>
-</head>
+    <!-- Bootstrap CSS -->
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3"
+      crossorigin="anonymous"
+    />
 
-<body>
-  <div class="login-page">
-    <div class="form">
-      <form class="login-form">
-        <input id="id" type="text" placeholder="아이디" />
-        <input id="psword" type="password" placeholder="비밀번호" />
-        <p id="button">login</p id="button">
-        <p class="message">Not registered? <a href="/register">Create an account</a></p>
-      </form>
+    <link rel="stylesheet" href="/css/home/login.css" />
+    <script src="/js/home/login.js" defer></script>
+    <title>로그인</title>
+  </head>
+
+  <body>
+    <div class="login-page">
+      <div class="form">
+        <form class="login-form">
+          <input id="id" type="text" placeholder="아이디" />
+          <input id="psword" type="password" placeholder="비밀번호" />
+          <button type="button" id="button" class="btn btn-primary" style="width: 100%">로그인</button>
+          <p class="message">아직 회원이 아니신가요? <a href="/register">계정 만들기</a></p>
+        </form>
+      </div>
     </div>
-  </div>
-</body>
-
+  </body>
 </html>
 
 <!--Copyright (c) 2021 by Aigars Silkalns (https://codepen.io/colorlib/pen/rxddKy)-->
