--- a/src/views/home/register.ejs
+++ b/src/views/home/register.ejs
@@ -4,6 +4,17 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <!-- Required meta tags -->
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+
+    <!-- Bootstrap CSS -->
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3"
+      crossorigin="anonymous"
+    />
     <link rel="stylesheet" href="/css/home/login.css" />
     <script
       src="https://code.jquery.com/jquery-3.6.0.js"
@@ -31,8 +42,9 @@
           <select id="univ" class="dropdown" required>
             <option disabled selected value>대학교 선택</option>
           </select>
-          <p id="button">SIGN UP</p>
-          <p class="message">Already registered? <a href="/login">login</a></p>
+          <!-- <p id="button">SIGN UP</p> -->
+          <button type="button" id="button" class="btn btn-primary" style="width: 100%">회원가입</button>
+          <p class="message">이미 계정이 있으신가요? <a href="/login">로그인</a></p>
         </form>
       </div>
     </div>
